# dw-core

./: Makefile  pyproject.toml
docs/: conf.py  index.rst  requirements_dev_licenses.rst  requirements_licenses.rst
dw_core/: __init__.py  core.py  cqrs.py  domain.py
dw_core/adapters/: __init__.py  mixins.py  task.py
dw_core/ports/: tasks.py
dw_core/tests/unit/: entrypoint_test.py  task_test.py
